# mkl-dnn

cmake/: platform.cmake
examples/: 3d_reorder.cpp  3d_reorder_filter.cpp  3d_simple_net.cpp  CMakeLists.txt  benchmark_conv_3d.cpp  benchmark_conv_bkw_3d.cpp  benchmark_conv_bkw_weights_3d.cpp  benchmark_pool_3d.cpp  simple_net.c  simple_training_net.c  test_convolution_3d.cpp  test_convolution_3d_bkw_data_ref.cpp  test_convolution_3d_bkw_weights_ref.cpp  test_convolution_3d_fwd_ref.cpp  test_convolution_3d_ref.cpp  test_pooling.cpp  test_pooling_fwd_ref.cpp  test_pooling_ref.cpp  test_reorder_3d.cpp  tf_conv3d.py
include/: mkldnn.h  mkldnn.hpp  mkldnn_types.h
src/: CMakeLists.txt
src/common/: c_types_map.hpp  convolution.cpp  convolution_pd.hpp  memory.cpp  memory_desc_wrapper.cpp  memory_desc_wrapper.hpp  mkldnn_debug.cpp  pooling.cpp  type_helpers.hpp
src/cpu/: avx512_common_pooling3D.cpp  avx512_common_pooling3D.hpp  cpu_convolution3D_1ch.cpp  cpu_convolution3D_1ch.hpp  cpu_convolution3D_fk1s1.cpp  cpu_convolution3D_fk1s1.hpp  cpu_convolution3D_nCdhw16c.cpp  cpu_convolution3D_nCdhw16c.hpp  cpu_convolution_pd.hpp  cpu_engine.cpp  cpu_reorder.cpp  jit_avx512_common_conv3D_1ch_kernel.cpp  jit_avx512_common_conv3D_1ch_kernel.hpp  jit_avx512_common_conv3D_kernel.cpp  jit_avx512_common_conv3D_kernel.hpp  jit_avx512_common_convolution3D.cpp  jit_avx512_common_convolution3D.hpp  jit_avx512_common_convolution3D_1ch.cpp  jit_avx512_common_convolution3D_1ch.hpp  jit_avx512_common_pool3D_kernel.cpp  jit_avx512_common_pool3D_kernel.hpp  jit_avx512_common_pooling3D.cpp  jit_avx512_common_pooling3D.hpp  jit_primitive_conf.hpp  ref_convolution3D.cpp  ref_convolution3D.hpp  ref_pooling3D.cpp  ref_pooling3D.hpp  simple_reorder.hpp
tests/: api.c
tests/benchdnn/conv/: conv.cpp
